complete search chart